--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "serve dist"
   },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
@@ -22,6 +23,7 @@
     "lucide-vue-next": "^0.525.0",
     "qrcode.vue": "^3.6.0",
     "register-service-worker": "^1.7.2",
+    "serve": "^14.2.4",
     "vue": "^3.5.17",
     "vue-chartjs": "^5.3.2",
     "vue-qrcode-reader": "^5.7.3",
