--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
+    "axios": "^1.11.0",
     "chart.js": "^4.5.0",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.13",
